# gantt-mind

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .vercelignore  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_plan_tables.py  0002_create_change_sets.py
backend/app/: config.py  main.py  seed.py
backend/app/api/: ai.py  dto.py  health.py  plans.py
backend/app/application/: __init__.py  ai_command_service.py  ai_contract.py  change_set_repository.py  change_set_service.py  excel_contract.py  excel_errors.py  excel_service.py  exceptions.py  llm_client.py  plan_query_service.py  plan_repository.py  plan_service.py
backend/app/domain/: __init__.py  entities.py  exceptions.py  operations.py  scheduler.py
backend/app/infrastructure/database/: __init__.py  models.py  session.py
backend/app/infrastructure/excel/: exporter.py  parser.py
backend/app/infrastructure/llm/: openai_client.py  openrouter_client.py
backend/app/infrastructure/mcp/: __init__.py  runtime.py
backend/app/infrastructure/repositories/: __init__.py  mappers.py  sqlalchemy_change_set_repository.py  sqlalchemy_plan_repository.py
backend/app/mcp/: __init__.py  runtime.py  schemas.py  server.py  tools.py
backend/app/scripts/: generate_sample_workbook.py
backend/tests/: conftest.py  test_health.py
backend/tests/api/: test_ai_command.py  test_plans.py
backend/tests/application/: test_ai_command_service.py  test_change_set_service.py  test_excel_service.py  test_plan_query_service.py  test_plan_service.py
backend/tests/domain/: test_operations.py  test_scheduler.py
backend/tests/infrastructure/: excel_workbook_helpers.py  test_excel_exporter.py  test_excel_parser.py  test_plan_repository.py
backend/tests/mcp/: test_tools.py
docs/: api-contracts.md  architecture.md  current-state.md  development-roadmap.md  excel-contract.md
(+34 files in other folders)
