[project]
name = "gantt-mind-backend"
version = "0.1.0"
description = "FastAPI backend for GanttMind."
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic-settings>=2.7,<3.0",
  "uvicorn[standard]>=0.34,<1.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1.0",
  "mypy>=1.14,<2.0",
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.25,<1.0",
  "ruff>=0.8,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["uvicorn.*"]
ignore_missing_imports = true
